--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "recharts": "^2.10.4"
   },
   "devDependencies": {
     "eslint": "^8",
