--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "recharts": "^2.10.4"
+    "recharts": "^2.10.4",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
